# movies-api-rust

./: .env  .gitignore  Cargo.toml
migrations/2022-08-06-155020_create_movies/: up.sql
migrations/2022-08-07-193236_init/: up.sql
migrations/2022-08-08-181951_add_author_and_year_columns/: up.sql
src/: api_error.rs  app_service.rs  db.rs  main.rs  models.rs  routes.rs  schema.rs
