[package]
name = "movies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
hex = "0.4"
rand = "0.8.5"
web3 = "0.17.0"
r2d2 = "0.8.9"
actix = "0.12.0"
actix-web = "4.0.0-beta.10"
actix-web-httpauth = "0.5.0"
actix-cors = "0.6.0-beta.3"
serde = "1.0.119"
serde_derive = "1.0.119"
serde_json = "1.0.64"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "uuidv07"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }